# game_engine

./: .clang_complete  .kdev_include_paths  CMakeLists.txt  main.cpp  space_arena.kdev4
.kdev4/: space_arena.kdev4
3d_models/: Arcturus Scout.lwo  BForge.rar  H8 SHIP 005 .blend  OBJ Bridge.rar  h2f2obj.rar
3d_models/scifi_pillar_obj/: pillar_low.mtl
common/: hello_bullet.cpp  hello_opengl.cpp  lodepng.cpp  shader.cpp  texture.cpp
core/: game_camera.cpp  game_camera.hpp  game_engine.cpp  game_engine.hpp  game_object.cpp  game_object.hpp  game_physics.cpp  game_physics.hpp  game_player.cpp  game_player.hpp  game_shader.cpp  game_shader.hpp  game_skybox.cpp  game_skybox.hpp  game_sprite.cpp  game_sprite.hpp  gl_err_log.cpp  gl_err_log.hpp
meshes/: ship.mtl  skybox.mtl  skydome.mtl
shaders/: ModelViewProjection.vertexshader  UvMappedTexture.fragmentshader
